search result spacing fix

--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -99,6 +99,7 @@ body.modders {
     .services {
       margin-top: 48px;
       max-width: 600px;
+      min-height: 16px;
 
       ol {
         list-style: none;
